tests/facebook_fbt_some/facebook_fbt_some.exp
Error -------------------------------------------------------------- main.js:4:2

Error: main.js:4
  4: (<fbt />: string); // Error (the libdef in this test marks fbt as number)
      ^^^^^^^ Cannot cast `<fbt />` to string because number [1] is incompatible with string [2].
  References:
    1: type Fbt = number
                  ^^^^^^ [1]: number. See lib: flow-typed/fbt.js:1
    4: (<fbt />: string); // Error (the libdef in this test marks fbt as number)
                 ^^^^^^ [2]: string


Found 1 error
